oops, update bib

--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -410,6 +410,34 @@
   timestamp     = {2017.09.18},
 }
 
+@Book{Roe1988a,
+  title         = {Elliptic operators, topology and asymptotic methods},
+  publisher     = {Longman Scientific \& Technical, Harlow; copublished in the United States with John Wiley \& Sons, Inc., New York},
+  year          = {1988},
+  author        = {Roe, John},
+  volume        = {179},
+  series        = {Pitman Research Notes in Mathematics Series},
+  isbn          = {0-582-01858-7},
+  __markedentry = {[andy:6]},
+  keywords      = {58G10 (58G11)},
+  mrnumber      = {960889},
+  pages         = {x+184},
+}
+
+@Book{Berline2004,
+  title         = {Heat kernels and {D}irac operators},
+  publisher     = {Springer-Verlag, Berlin},
+  year          = {2004},
+  author        = {Berline, Nicole and Getzler, Ezra and Vergne, Mich\`ele},
+  series        = {Grundlehren Text Editions},
+  isbn          = {3-540-20062-2},
+  note          = {Corrected reprint of the 1992 original},
+  __markedentry = {[andy:6]},
+  keywords      = {58J35 (35K05 35Q40 47G30 58J60)},
+  mrnumber      = {2273508},
+  pages         = {x+363},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: fileDirectory:/home/andy/ownCloud/bib-cache;}
