--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -2809,6 +2809,8 @@ So it is what we expected from the commutation relation
 
 \fixme{isometries of $Y$}
 
+\fixme{the conserved charge}
+
 \fixme{coupling to ``background field'': connection on the
 circle}
 
