--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -2855,9 +2855,20 @@ Thus the partition function on $X = S^1(T)$ is
   Z_{S^1(T)} = \Tr \e^{-T H} = \sum_{n=0}^\infty \e^{- \omega T(n + \half)} = \frac{1}{2 \sinh(\omega T/2)}.
 \end{equation}
 
-\fixme{...}
 
-\fixme{also do $Y = S^1$ with no potential, with and without insertion of shift operator}
+\subsection{The sigma model on \texorpdfstring{$S^1$}{S1}}
+
+Another basic example is
+\begin{equation}
+  Y = S^1_R, \qquad V = 0.
+\end{equation}
+Here we have
+\begin{equation}
+  H = -\half \partial_x^2
+\end{equation}
+acting on $\cH = L^2(S^1)$.
+
+\fixme{...}
 
 
 \subsection{Infinite-dimensional determinants}
